(Format: Year/Month/Day)
Changes for 0.9.5:
*03/08/25:
   * Added window icon for FbRun (Henrik)
     fbrun.xpm, FbRun.hh/cc
*03/08/24:
   * Fixed transparent bug in Menus (submenu) (Henrik)
     Menu.cc
   * Fixed so shaped windows like xmms wont get theme  (Henrik)
     specified shape (round corners) 
   * Added file Compose.hh (Henrik)
   * Fixed randr support in toolbar (Henrik)
     Toolbar.cc, Screen.hh/cc
*03/08/23:
   * Fixed autohide and menu in Toolbar (Henrik)
     Toolbar.cc, EventManager.hh/cc, WorkspaceNameTool.hh
*03/08/22:
   * Added search path resource for images (Henrik)
     * session.screen<num>.imageSearchPath
     This is a list separated by , or space
     example: session.screen0.imageSearchPath: ~/.fluxbox/pixmaps, /usr/share/fluxbox/pixmaps
   * Added new files for image loading (Henrik)
     The new way to load pixmap is to call FbTk::Image::load(thefile, screen_num);
     and to add more image file support you just have to extend FbTk::ImageBase 
     and register it to FbTk::Image     
     Image.hh/cc, ImageXPM.hh/cc, PixmapWithMask.hh, Theme.cc, WinButtonTheme.hh/cc,
     WinButton.cc/hh, fluxbox.cc
   * Fixed scaling in WinButtonTheme (Henrik)
     WinButton.cc, Screen.cc WinButtonTheme.hh/cc
   * Added new theme item window.title.height, Window.Title.Height (Henrik)
     FbWinFrameTheme.hh/cc
*03/08/19:
   * Added ResizeVertical and ResizeHorizontal  (Thanks Mathias Gumz)
     CurrentWindowCmd.hh/cc, FbCommandFactory.cc
   * Fixed fallback option for theme items (Henrik)
     So the toolbar should look better in old themes
     ToolTheme.cc/hh, IconbarTheme.hh/cc, Theme.hh/cc,
   * Fixed bug in Subject.cc that cause observers to be added more than once (Henrik)	
     Subject.cc
*03/08/17:
   * Update fbsetbg and fluxbox-generate_menu (Han)
*03/08/16:
   * Fixed iconified windows in toolbar  (Henrik)
     IconbarTool.cc
   * Fixed default values on startup for some themes  (Henrik)